Simplified jumps' resolution method and number class